styling: spacing correct, need mobile responsive

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   height: 100px;
   padding: 20px;
   color: white;
+  margin-bottom: 10px;
 }
 
 .App-title {
